# SuperPI-Spark

./: CMakeLists.txt  I18N.md  Makefile  Makefile.am  README.md  README_I18N.md  configure.ac  install-i18n.sh  pi128.txt  pi_fftcs.c  superpi
i18n/: i18n.c  i18n.h
i18n/translations/: zh_CN.txt
po/: Makevars  POTFILES.in  en.po  messages.pot  superpi.pot  zh_CN.po
po/en/LC_MESSAGES/: superpi.mo
po/zh_CN/LC_MESSAGES/: superpi.mo
tools/: extract-messages.sh
